# Instabov_Eartag

./: CMakeLists.txt  README.md  nrf54l15dk_nrf54l15_cpuapp.overlay  prj.conf
src/: main.c
src/ble/: ble_adv.c  ble_adv.h
src/libraries/: fuel_gauge_cr2430.c  fuel_gauge_cr2430.h
src/peripherals/: my_adc.c  my_adc.h  my_gpio.c  my_temp.c  my_temp.h
